The :target Trick - Accordion

--- a/accordion.html
+++ b/accordion.html
@@ -9,18 +9,15 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
-
 <body>
   <main class="wrapper">
     <h1>
-      <a href="https://prgssr.ru/development/tryuki-s-psevdoklassom-target.html" target="_blank"
-        rel="noopener noreferrer">
+      <a href="#" target="_blank" rel="noopener noreferrer">
         The :target Trick
       </a>
     </h1>
 
-    <!-- Accordion Example -->
-    <!-- the-target-trick-accordion -->
+    <!-- Accordion Example:  the-target-trick accordion -->
     <section class="accordion-section">
       <h2>Accordion</h2>
       <div class="accordion">
