--- a/accordion.html
+++ b/accordion.html
@@ -12,7 +12,7 @@
 <body>
   <main class="wrapper">
     <h1>
-      <a href="#" target="_blank" rel="noopener noreferrer">
+      <a href="#">
         The :target Trick
       </a>
     </h1>
